Fixed the code editor not working on mobile problme

--- a/public/app/styles/chatroom/chat-menu.less
+++ b/public/app/styles/chatroom/chat-menu.less
@@ -48,7 +48,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 130px;
+  height: 100px;
   pointer-events: none;
   border-top: black 2px solid;
 }
